4.2.0 update