@@ -4,14 +4,12 @@ import com.campmongoose.serversaturday.Reference.MenuText;
 import com.campmongoose.serversaturday.ServerSaturday;
 import com.campmongoose.serversaturday.submission.Build;
 import com.campmongoose.serversaturday.submission.Submitter;
-import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.Multimap;
 import com.google.common.collect.TreeMultimap;
-import io.musician101.musicianlibrary.java.minecraft.spigot.gui.chest.SpigotIconBuilder;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
+import java.util.Map;
 import java.util.stream.IntStream;
 import javax.annotation.Nonnull;
 import org.bukkit.ChatColor;
@@ -20,6 +18,9 @@ import org.bukkit.entity.Player;
 import org.bukkit.event.inventory.ClickType;
 import org.bukkit.inventory.ItemStack;
 
+import static io.musician101.musigui.spigot.chest.SpigotIconUtil.customName;
+import static io.musician101.musigui.spigot.chest.SpigotIconUtil.setLore;
+
 public class AllSubmissionsGUI extends ServerSaturdayChestGUI {
 
     private int page = 1;
@@ -27,7 +28,7 @@ public class AllSubmissionsGUI extends ServerSaturdayChestGUI {
     public AllSubmissionsGUI(@Nonnull Player player) {
         super(player, MenuText.ALL_SUBMISSIONS, 54);
         updateSlots();
-        setButton(50, SpigotIconBuilder.of(Material.BARRIER, "Back"), ImmutableMap.of(ClickType.LEFT, Player::closeInventory));
+        setButton(50, customName(new ItemStack(Material.BARRIER), "Back"), Map.of(ClickType.LEFT, Player::closeInventory));
     }
 
     private void updateSlots() {
@@ -40,15 +41,16 @@ public class AllSubmissionsGUI extends ServerSaturdayChestGUI {
                 Build build = builds.get(index);
                 Submitter submitter = map.get(build).iterator().next();
                 map.remove(build, submitter);
-                ItemStack itemStack = SpigotIconBuilder.builder(Material.BOOK).name((build.submitted() && !build.featured() ? ChatColor.GREEN : ChatColor.RED) + build.getName()).description(Collections.singletonList("By " + submitter.getName())).build();
-                setButton(x, itemStack, ImmutableMap.of(ClickType.LEFT, p -> {
+                String name = (build.submitted() && !build.featured() ? ChatColor.GREEN : ChatColor.RED) + build.getName();
+                ItemStack itemStack = setLore(customName(new ItemStack(Material.BOOK), name), "By " + submitter.getName());
+                setButton(x, itemStack, ClickType.LEFT, p -> {
                     if (p.getUniqueId().equals(submitter.getUUID())) {
                         new EditBuildGUI(build, submitter, p);
                         return;
                     }
 
                     new ViewBuildGUI(build, submitter, p);
-                }));
+                });
             }
             catch (IndexOutOfBoundsException ignored) {
 
@@ -59,21 +61,21 @@ public class AllSubmissionsGUI extends ServerSaturdayChestGUI {
             removeButton(45);
         }
         else {
-            setButton(45, SpigotIconBuilder.of(Material.ARROW, MenuText.PREVIOUS_PAGE), ImmutableMap.of(ClickType.LEFT, p -> {
+            setButton(45, customName(new ItemStack(Material.ARROW), MenuText.PREVIOUS_PAGE), ClickType.LEFT, p -> {
                 page--;
                 updateSlots();
-            }));
+            });
         }
 
         int maxPage = Double.valueOf(Math.ceil(map.size() / 45d)).intValue();
-        if (page < maxPage) {
+        if (page >= maxPage) {
             removeButton(53);
         }
         else {
-            setButton(53, SpigotIconBuilder.of(Material.ARROW, MenuText.NEXT_PAGE), ImmutableMap.of(ClickType.LEFT, p -> {
+            setButton(53, customName(new ItemStack(Material.ARROW), MenuText.NEXT_PAGE), ClickType.LEFT, p -> {
                 page++;
                 updateSlots();
-            }));
+            });
         }
     }
 }
