@@ -6,12 +6,10 @@ import com.campmongoose.serversaturday.Reference.Permissions;
 import com.campmongoose.serversaturday.ServerSaturday;
 import com.campmongoose.serversaturday.submission.Build;
 import com.campmongoose.serversaturday.submission.Submitter;
-import com.google.common.collect.ImmutableMap;
-import io.musician101.musicianlibrary.java.minecraft.spigot.SpigotTextInput;
-import io.musician101.musicianlibrary.java.minecraft.spigot.gui.chest.SpigotIconBuilder;
-import java.util.Collections;
+import io.musician101.musigui.spigot.SpigotTextInput;
 import java.util.Comparator;
 import java.util.List;
+import java.util.Map;
 import java.util.stream.IntStream;
 import javax.annotation.Nonnull;
 import org.bukkit.ChatColor;
@@ -19,6 +17,9 @@ import org.bukkit.Material;
 import org.bukkit.entity.Player;
 import org.bukkit.event.inventory.ClickType;
 import org.bukkit.inventory.ItemStack;
+
+import static io.musician101.musigui.spigot.chest.SpigotIconUtil.customName;
+import static io.musician101.musigui.spigot.chest.SpigotIconUtil.setLore;
 
 public class SubmitterGUI extends ServerSaturdayChestGUI {
 
@@ -36,8 +37,9 @@ public class SubmitterGUI extends ServerSaturdayChestGUI {
             try {
                 int index = x + (page - 1) * 45;
                 Build build = builds.get(index);
-                ItemStack itemStack = SpigotIconBuilder.builder(Material.BOOK).name((build.submitted() && !build.featured() ? ChatColor.GREEN : ChatColor.RED) + build.getName()).description(Collections.singletonList("By " + submitter.getName())).build();
-                setButton(x, itemStack, ImmutableMap.of(ClickType.LEFT, p -> {
+                String name = (build.submitted() && !build.featured() ? ChatColor.GREEN : ChatColor.RED) + build.getName();
+                ItemStack itemStack = setLore(customName(new ItemStack(Material.BOOK), name), "By " + submitter.getName());
+                setButton(x, itemStack, Map.of(ClickType.LEFT, p -> {
                     if (submitter.getUUID().equals(p.getUniqueId())) {
                         new EditBuildGUI(build, submitter, p);
                         return;
@@ -57,15 +59,15 @@ public class SubmitterGUI extends ServerSaturdayChestGUI {
         });
 
         if (player.getUniqueId().equals(submitter.getUUID()) && player.hasPermission(Permissions.SUBMIT)) {
-            setButton(48, SpigotIconBuilder.of(Material.EMERALD_BLOCK, MenuText.NEW_BUILD), ImmutableMap.of(ClickType.LEFT, p -> {
+            setButton(48, customName(new ItemStack(Material.EMERALD_BLOCK), MenuText.NEW_BUILD), ClickType.LEFT, p -> {
                 p.closeInventory();
-                p.sendMessage(ChatColor.GREEN + Messages.SET_BUILD_NAME);
+                p.sendMessage(Messages.SET_BUILD_NAME);
                 new SpigotTextInput(ServerSaturday.getInstance(), p) {
 
                     @Override
                     protected void process(Player player, String s) {
                         if (submitter.getBuild(s).isPresent()) {
-                            player.sendMessage(ChatColor.RED + Messages.BUILD_ALREADY_EXISTS);
+                            player.sendMessage(Messages.BUILD_ALREADY_EXISTS);
                             return;
                         }
 
@@ -73,35 +75,35 @@ public class SubmitterGUI extends ServerSaturdayChestGUI {
                         new EditBuildGUI(build, submitter, player);
                     }
                 };
-            }));
+            });
 
-            setButton(50, SpigotIconBuilder.of(Material.BARRIER, "Back"), ImmutableMap.of(ClickType.LEFT, SubmittersGUI::new));
+            setButton(50, customName(new ItemStack(Material.BARRIER), "Back"), ClickType.LEFT, SubmittersGUI::new);
         }
         else {
             removeButton(48);
             removeButton(50);
-            setButton(49, SpigotIconBuilder.of(Material.BARRIER, "Back"), ImmutableMap.of(ClickType.LEFT, SubmittersGUI::new));
+            setButton(49, customName(new ItemStack(Material.BARRIER), "Back"), ClickType.LEFT, SubmittersGUI::new);
         }
 
         if (page == 1) {
             removeButton(45);
         }
         else {
-            setButton(45, SpigotIconBuilder.of(Material.ARROW, MenuText.PREVIOUS_PAGE), ImmutableMap.of(ClickType.LEFT, p -> {
+            setButton(45, customName(new ItemStack(Material.ARROW), MenuText.PREVIOUS_PAGE), ClickType.LEFT, p -> {
                 page--;
                 updateSlots(submitter);
-            }));
+            });
         }
 
         int maxPage = Double.valueOf(Math.ceil(builds.size() / 45d)).intValue();
-        if (page > maxPage) {
+        if (page >= maxPage) {
             removeButton(53);
         }
         else {
-            setButton(53, SpigotIconBuilder.of(Material.ARROW, MenuText.NEXT_PAGE), ImmutableMap.of(ClickType.LEFT, p -> {
+            setButton(53, customName(new ItemStack(Material.ARROW), MenuText.NEXT_PAGE), ClickType.LEFT, p -> {
                 page++;
                 updateSlots(submitter);
-            }));
+            });
         }
     }
 }
